--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-dist
-dist-*
-cabal-dev
-*.o
-*.hi
-*.chi
-*.chs.h
-*.dyn_o
-*.dyn_hi
-.hpc
-.hsenv
-.cabal-sandbox/
-cabal.sandbox.config
-*.prof
-*.aux
-*.hp
-*.eventlog
+*.sw*
+.DS_Store
 .stack-work/
-cabal.project.local
