--- a/monopoly.cabal
+++ b/monopoly.cabal
@@ -1,22 +1,26 @@
 name:                monopoly
 version:             0.1
--- synopsis:
+synopsis:            Монополия
 -- description:
--- homepage:
--- license:
--- license-file:
-author:              Author name here
-maintainer:          author@email.com
-copyright:           2017 Author name here
+homepage:            https://github.com/cmc-haskell-2017/demo-space-junk#readme
+license:             MIT
+license-file:        LICENSE
+author:              Nickolay Kudasov
+maintainer:          nickolay.kudasov@gmail.com
+copyright:           2017 Nickolay Kudasov
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
+  exposed-modules:     Monopoly,
+                       Const,
+                       Model
   ghc-options:         -Wall -fno-warn-type-defaults
-  exposed-modules:     Monopoly
   build-depends:       base >= 4.7 && < 5
+                     , gloss
+                     , gloss-juicy
   default-language:    Haskell2010
 
 executable monopoly
@@ -27,12 +31,16 @@ executable monopoly
                      , monopoly
   default-language:    Haskell2010
 
-test-suite monopoly-test
+test-suite doctest
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
-  main-is:             Spec.hs
+  main-is:             Doctest.hs
   build-depends:       base
                      , monopoly
+                     , doctest >= 0.11.1
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
+source-repository head
+  type:     git
+  location: https://github.com/cmc-haskell-2017/demo-space-junk
