--- a/monopoly.cabal
+++ b/monopoly.cabal
@@ -21,6 +21,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , gloss
                      , gloss-juicy
+                     , random
   default-language:    Haskell2010
 
 executable monopoly
